# market-data-platform

./: .env.example  .envrc.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/presets/release/: hk_connect.yml  hk_current.yml  hk_etf.yml  hk_full.yml
configs/presets/universe/: hk_all_assets.yml  hk_connect.yml
docs/: README.md  compatibility.md  contracts.md  data-warehouse.md  hk-assets.md  integrations.md  maintenance-audit.md  migration-plan.md  operations.md  quality-governance.md  session-handoff-a-share-backfill-20260531.md
openspec/changes/audit-maintainability-and-docs/: design.md  proposal.md  tasks.md
openspec/changes/audit-maintainability-and-docs/specs/documentation-fact-alignment/: spec.md
openspec/changes/audit-maintainability-and-docs/specs/maintainability-audit/: spec.md
openspec/changes/audit-maintainability-and-docs/specs/quality-coverage-tightening/: spec.md
scripts/dev/: architecture_governance.py  compatibility_governance.py  maintainability_baseline.json  maintainability_metrics.py  quality_baseline.json  quality_debt.py
scripts/internal/: import_cross_artifacts.py
src/hk_data_platform/: __init__.py  cli.py  contract.py  manifest.py  paths.py  registry.py
src/market_data_platform/: __init__.py  artifacts.py  backup_data.py  cli.py  config_utils.py  contract.py  contract_health.py  current_assets.py  data_provider_contracts.py  data_providers.py  data_warehouse.py  deprecations.py  hk_workflows.py  intraday_paths.py  manifest.py  paths.py  pit_feature_stats.py  provider_cache.py  rebalance.py  registry.py  repo_paths.py  rqdata_cli_common.py  rqdata_cn.py  rqdata_runtime.py  symbols.py  transitions.py  tushare_backfill.py  tushare_cli.py  tushare_cn.py  warehouse_query.py
src/market_data_platform/hk_assets/: __init__.py  _public_exports.py  args.py  args_mirror.py  args_shared.py  asset_health.py  asset_health_daily_rules.py  asset_health_rendering.py  asset_io.py  audit_assets.py  build.py  build_hk_connect_universe.py  build_hk_daily_asset_universe.py  build_paths.py  clean_daily.py  cli.py  command_registry.py  coverage.py  coverage_rendering.py  current_health.py  fetch_runtime.py  health_shared.py  industry_ops.py  intraday_asset.py  intraday_download.py  intraday_health.py  intraday_sync.py  manifest_ops.py  mirror_daily.py  mirror_dated.py  mirror_financial.py  mirror_industry.py  mirror_industry_changes.py  mirror_industry_southbound.py  mirror_instrument_industry.py  mirror_workflow.py  models.py  package_api.py  patch_merge.py  public_api.py  (+4 more)
src/market_data_platform/hk_depth/: __init__.py  aggregate.py  assets.py  audit.py  cli.py  compact.py  coverage.py  download_state.py  downloader.py  exceptions.py  fields.py  health.py  progress.py  quality.py  quota.py  raw_duplicates.py  recompress.py  reconcile.py  release_assets.py  rq_client.py  runtime.py  schema.py  storage.py  symbols.py  testing.py
src/market_data_platform/providers/: __init__.py  rqdata_a_share.py  rqdata_cn.py  tushare_a_share.py  tushare_a_share_clean.py  tushare_a_share_universe.py  tushare_cn.py
src/market_data_platform/release_tools/: __init__.py  hk_asset_workflow.py  hk_asset_workflow_config.py  hk_asset_workflow_health.py  hk_asset_workflow_parser.py  hk_asset_workflow_paths.py  hk_asset_workflow_planning.py  hk_asset_workflow_repair.py  hk_asset_workflow_report.py  hk_asset_workflow_state.py  package_assets.py  release_assets.py
tests/: test_artifacts.py  test_backup_data.py  test_data_providers_cache.py  test_data_warehouse.py  test_fundamentals_providers.py  test_hk_asset_workflow.py  test_hk_depth.py  test_hk_intraday_download.py  test_market_specs.py  test_paths.py  test_quality_governance.py  test_release_package_assets.py  test_rqdata_a_share.py  test_rqdata_cn.py  test_symbol_alias.py  test_transitions.py  test_tushare_a_share.py  test_tushare_a_share_clean.py  test_tushare_a_share_universe.py  test_tushare_cn.py  test_tushare_platform_assets.py  test_universe_tools.py
