[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-platform"
version = "0.1.0"
description = "Shared multi-market research data control plane contracts and helpers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pandas>=2.2",
  "pyarrow>=16",
  "python-dotenv>=1",
  "pytest>=8",
  "pyright>=1.1.390",
  "ruff>=0.8",
]
hk-depth = [
  "pandas>=2.2",
  "pyarrow>=16",
  "python-dotenv>=1",
]
rqdata = [
  "pandas>=2.2",
  "pyarrow>=16",
  "python-dotenv>=1",
  "rqdatac>=3.4.3,<3.5",
  "rqdatac-hk",
  "rqsdk",
]
tushare = [
  "pandas>=2",
  "pyarrow>=15",
  "tushare>=1.4",
]

[project.scripts]
marketdata = "market_data_platform.cli:main"
hkdata = "hk_data_platform.cli:main"
rqdata-hk-depth = "market_data_platform.hk_depth.cli:main_entry"
rqdata-tick = "market_data_platform.hk_depth.cli:main_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  ".venv",
  "artifacts",
  "data",
  "reports",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RET", "RUF100"]

[tool.pyright]
include = ["src/market_data_platform", "src/hk_data_platform"]
exclude = [
  ".venv",
  "artifacts",
  "data",
  "reports",
  # Migrated from rqdata-hk-depth-snapshots; keep runtime migration separate
  # from the pandas-heavy typing cleanup.
  "src/market_data_platform/hk_depth",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
