[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-platform"
version = "0.1.0"
description = "Shared multi-market research data control plane contracts and helpers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.23",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pandas>=2.2",
  "pyarrow>=16",
  "python-dotenv>=1",
  "pytest>=8",
  "pyright>=1.1.390",
  "ruff>=0.8",
]
duckdb = [
  "duckdb>=1.0",
]
hk-depth = [
  "pandas>=2.2",
  "pyarrow>=16",
  "python-dotenv>=1",
]
rqdata = [
  "pandas>=2.2",
  "pyarrow>=16",
  "python-dotenv>=1",
  "rqdatac>=3.4.3,<3.5",
  "rqdatac-hk",
  "rqsdk",
]
tushare = [
  "pandas>=2",
  "pyarrow>=15",
  "tushare>=1.4",
]

[project.scripts]
marketdata = "market_data_platform.cli:main"
hkdata = "hk_data_platform.cli:main"
rqdata-hk-depth = "market_data_platform.hk_depth.cli:main_entry"
rqdata-tick = "market_data_platform.hk_depth.cli:main_entry"
rqdata-hk-assets = "market_data_platform.hk_assets.cli:main_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  ".venv",
  "artifacts",
  "data",
  "reports",
  "src/market_data_platform/config_utils.py",
  "src/market_data_platform/data_provider_contracts.py",
  "src/market_data_platform/data_providers.py",
  "src/market_data_platform/data_warehouse.py",
  "src/market_data_platform/hk_assets",
  "src/market_data_platform/pit_feature_stats.py",
  "src/market_data_platform/rebalance.py",
  "src/market_data_platform/release_tools",
  "src/market_data_platform/rqdata_cli_common.py",
  "src/market_data_platform/rqdata_runtime.py",
  "src/market_data_platform/symbols.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RET", "RUF100"]

[tool.pyright]
include = ["src/market_data_platform", "src/hk_data_platform"]
exclude = [
  ".venv",
  "artifacts",
  "data",
  "reports",
  # Migrated from rqdata-hk-depth-snapshots; keep runtime migration separate
  # from the pandas-heavy typing cleanup.
  "src/market_data_platform/hk_depth",
  # Migrated from cross-sectional-trees; keep runtime migration separate from
  # the pandas-heavy typing cleanup.
  "src/market_data_platform/hk_assets",
  "src/market_data_platform/config_utils.py",
  "src/market_data_platform/data_provider_contracts.py",
  "src/market_data_platform/data_providers.py",
  "src/market_data_platform/data_warehouse.py",
  "src/market_data_platform/pit_feature_stats.py",
  "src/market_data_platform/rebalance.py",
  "src/market_data_platform/release_tools",
  "src/market_data_platform/rqdata_cli_common.py",
  "src/market_data_platform/rqdata_runtime.py",
  "src/market_data_platform/symbols.py",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
