[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-platform"
version = "0.1.0"
description = "Shared multi-market research data control plane contracts and helpers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.23",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pandas>=2.2",
  "pyarrow>=16",
  "python-dotenv>=1",
  "pytest>=8",
  "pyright>=1.1.390",
  "ruff>=0.8",
]
duckdb = [
  "duckdb>=1.0",
]
hk-depth = [
  "pandas>=2.2",
  "pyarrow>=16",
  "python-dotenv>=1",
]
rqdata = [
  "pandas>=2.2",
  "pyarrow>=16",
  "python-dotenv>=1",
  "rqdatac>=3.4.3,<3.5",
  "rqdatac-hk",
  "rqsdk",
]
tushare = [
  "pandas>=2",
  "pyarrow>=15",
  "tushare>=1.4",
]

[project.scripts]
marketdata = "market_data_platform.cli:main"
hkdata = "hk_data_platform.cli:main"
rqdata-hk-depth = "market_data_platform.hk_depth.cli:main_entry"
rqdata-tick = "market_data_platform.hk_depth.cli:main_entry"
rqdata-hk-assets = "market_data_platform.hk_assets.cli:main_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  ".venv",
  "artifacts",
  "data",
  "reports",
  "src/market_data_platform/hk_assets",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RET", "RUF100"]

[tool.pyright]
include = ["src/market_data_platform", "src/hk_data_platform"]
exclude = [
  ".venv",
  "artifacts",
  "data",
  "reports",
  # Keep hk_depth migration debt explicit while letting the refactored
  # downloader module participate in Pyright.
  "src/market_data_platform/hk_depth/__init__.py",
  "src/market_data_platform/hk_depth/aggregate.py",
  "src/market_data_platform/hk_depth/assets.py",
  "src/market_data_platform/hk_depth/audit.py",
  "src/market_data_platform/hk_depth/cli.py",
  "src/market_data_platform/hk_depth/compact.py",
  "src/market_data_platform/hk_depth/coverage.py",
  "src/market_data_platform/hk_depth/download_state.py",
  "src/market_data_platform/hk_depth/exceptions.py",
  "src/market_data_platform/hk_depth/fields.py",
  "src/market_data_platform/hk_depth/health.py",
  "src/market_data_platform/hk_depth/progress.py",
  "src/market_data_platform/hk_depth/quality.py",
  "src/market_data_platform/hk_depth/quota.py",
  "src/market_data_platform/hk_depth/raw_duplicates.py",
  "src/market_data_platform/hk_depth/recompress.py",
  "src/market_data_platform/hk_depth/reconcile.py",
  "src/market_data_platform/hk_depth/release_assets.py",
  "src/market_data_platform/hk_depth/rq_client.py",
  "src/market_data_platform/hk_depth/runtime.py",
  "src/market_data_platform/hk_depth/schema.py",
  "src/market_data_platform/hk_depth/storage.py",
  "src/market_data_platform/hk_depth/symbols.py",
  "src/market_data_platform/hk_depth/testing.py",
  "src/market_data_platform/hk_assets",
  "src/market_data_platform/data_providers.py",
  "src/market_data_platform/data_warehouse.py",
  "src/market_data_platform/release_tools",
  "src/market_data_platform/rqdata_runtime.py",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
